force-app/main/default/objects/Cloudrop__Profile_Visibility_Button__c/Cloudrop__Profile_Visibility_Button__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Profile Visibility Button</label>
</CustomObject>