force-app/main/default/objects/Cloudrop__Profile_Visibility_Button__c/fields/Cloudrop__MassMailer_Docs_Download__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Docs_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MassMailer Docs Download</label>
    <type>Checkbox</type>
</CustomField>