force-app/main/default/objects/Cloudrop__Profile_Visibility_Button__c/fields/Cloudrop__New_Folder_Button__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__New_Folder_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Folder Button</label>
    <type>Checkbox</type>
</CustomField>