force-app/main/default/objects/Cloudrop__Profile_Visibility_Button__c/fields/Cloudrop__Send_bulk_Email_Button__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Send_bulk_Email_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send bulk Email Button</label>
    <type>Checkbox</type>
</CustomField>